--- a/trac/templates/layout.html
+++ b/trac/templates/layout.html
@@ -6,7 +6,7 @@
       xmlns:py="http://genshi.edgewall.org/"
       py:strip="">
 
-  <head py:match="head">
+  <py:match path="head" once="true"><head>
     <title py:with="title = list(select('title/text()'))">
       <py:if test="title">${title} –</py:if>
       ${' – '.join(filter(None, [project.name, 'Trac']))}
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="${href.chrome('common/js/ie_pre7_hacks.js')}"></script>
     ${Markup('&lt;![endif]--&gt;')}
     ${select("*[local-name() != 'title']")}
-  </head>
+  </head></py:match>
 
   <div py:def="navigation(category)" id="${category}" class="nav">
     <ul py:if="chrome.nav[category]">
@@ -35,7 +35,7 @@
     </ul>
   </div>
 
-  <body py:match="body">
+  <py:match path="body" once="true"><body>
     <div id="banner">
       <div id="header" py:choose="">
         <a py:when="chrome.logo.src" id="logo" href="${chrome.logo.link}"><img
@@ -99,7 +99,7 @@
       </p>
       <p class="right">${chrome.footer}</p>
     </div>
-  </body>
+  </body></py:match>
 
   <xi:include href="site.html"><xi:fallback /></xi:include>
 
