--- a/trac/prefs/templates/prefs_keybindings.html
+++ b/trac/prefs/templates/prefs_keybindings.html
@@ -11,6 +11,7 @@
   <body>
 
     <div class="field">
+      <input type="hidden" name="accesskeys_cb" value="" />
       <label>
         <input type="checkbox" name="accesskeys" value="1"
                checked="${settings.session.get('accesskeys') or None}" />
