--- a/trac/htdocs/css/roadmap.css
+++ b/trac/htdocs/css/roadmap.css
@@ -19,6 +19,7 @@ table.progress :link:hover, table.progress :visited:hover {
  text-decoration: none
 }
 table.progress td { background: #fff; padding: 0 }
+table.progress td.new { background: #f5f5b5 }
 table.progress td.closed { background: #bae0ba }
 table.progress td :hover { background: none }
 p.percent { font-size: 10px; line-height: 2.4em; margin: 0.9em 0 0 }
