--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -140,7 +140,8 @@
           <h2 class="summary searchable">$ticket.summary</h2>
 
           <table class="properties"
-                 py:with="fields = [f for f in fields if not f.skip and f.name != 'type']">
+                 py:with="fields = [f for f in fields if not f.skip and f.name
+                                    not in ('type', 'owner')]">
             <tr>
               <th id="h_reporter">Reported by:</th>
               <td headers="h_reporter" class="searchable">${authorinfo(ticket.reporter)}</td>
