--- a/trac/versioncontrol/templates/browser.html
+++ b/trac/versioncontrol/templates/browser.html
@@ -46,7 +46,7 @@
              title="Annotate each line with the last changed revision (this can be time consuming...)">
             Annotate</a>
         </li>
-        <li class="last"><a href="${href.log(path, rev=rev)}">Revision Log</a></li>
+        <li class="last"><a href="${href.log(path, rev=stickyrev)}">Revision Log</a></li>
       </ul>
     </div>
 
