--- a/trac/templates/layout.html
+++ b/trac/templates/layout.html
@@ -39,7 +39,8 @@
     <div id="banner">
       <div id="header" py:choose="">
         <a py:when="chrome.logo.src" id="logo" href="${chrome.logo.link}"><img
-          src="${chrome.logo.src}" alt="${chrome.logo.alt}" /></a>
+          src="${chrome.logo.src}" alt="${chrome.logo.alt}"
+          height="${chrome.logo.height or None}" width="${chrome.logo.width or None}" /></a>
         <h1 py:otherwise=""><a href="${chrome.logo.link}">${project.name}</a></h1>
       </div>
       <form py:if="'SEARCH_VIEW' in perm" id="search"
