--- a/trac/templates/macros.html
+++ b/trac/templates/macros.html
@@ -1,6 +1,14 @@
 <div xmlns="http://www.w3.org/1999/xhtml"
      xmlns:py="http://genshi.edgewall.org/" py:strip="">
 
+  <!--! 
+     
+     WARNING: this file and the corresponding <py:def>s are going to be phased
+              out soon. Please DON'T include macros.html in your own templates.
+
+              See http://trac.edgewall.org/ticket/6374
+  -->
+
   <!--!  Display the plural or singular form of a noun depending on a given
   -      number.
   -
