--- a/trac/templates/layout.html
+++ b/trac/templates/layout.html
@@ -43,12 +43,13 @@
           height="${chrome.logo.height or None}" width="${chrome.logo.width or None}" /></a>
         <h1 py:otherwise=""><a href="${chrome.logo.link}">${project.name}</a></h1>
       </div>
-      <form py:if="'SEARCH_VIEW' in perm" id="search"
-            action="${href.search()}" method="get"><div>
-        <label for="proj-search">Search:</label>
-        <input type="text" id="proj-search" name="q" size="18" accesskey="f" value="" />
-        <input type="submit" value="Search" />
-      </div></form>
+      <form id="search" action="${href.search()}" method="get">
+        <div py:if="'SEARCH_VIEW' in perm">
+          <label for="proj-search">Search:</label>
+          <input type="text" id="proj-search" name="q" size="18" accesskey="f" value="" />
+          <input type="submit" value="Search" />
+        </div>
+      </form>
       ${navigation('metanav')}
     </div>
     ${navigation('mainnav')}
