--- a/trac/templates/about.html
+++ b/trac/templates/about.html
@@ -22,7 +22,7 @@
 
       <a href="http://trac.edgewall.org/"
         style="border: none; float: right; margin-left: 2em">
-        <img style="display: block" src="${href.chrome('common/trac_banner.png')}"
+        <img style="display: block" src="${chrome.htdocs_location}trac_banner.png"
           alt="Trac: Integrated SCM &amp; Project Management"/>
       </a>
       <h1>About Trac</h1>
